# MemOS

./: App.tsx  Dockerfile.web  README.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
.github/: copilot-instructions.md
components/: AuditPanel.tsx  CondensationHistory.tsx  ContextPackView.tsx  CortexVisualizer.tsx  Dashboard.tsx  MemoryCardView.tsx  MemoryHeatmap.tsx  MemoryPipeline.tsx  RagDebugger.tsx  SemanticRadar.tsx
components/ui/: Card.tsx
docs/: PROJECT_LOG.md  ROADMAP_TODO.md
helloagents/: CHANGELOG.md  INDEX.md  context.md  interview_outline.md
helloagents/archive/: _index.md
helloagents/modules/: _index.md  industry_alignment.md  infra.md  server.md  web.md  worker.md
helloagents/plan/202601241650_memory-card-buckets/: proposal.md  tasks.md
helloagents/plan/202601242120_industry-aligned-mock-and-extraction/: proposal.md  tasks.md
scripts/: check_todo5.ps1  dev_api.ps1  dev_web.ps1  dev_worker.ps1  reset_session.ps1  rq_clear_condensation.ps1  verify_demo.ps1
server/: Dockerfile  README.md  pyproject.toml  worker.py
server/db/init/: 010-schema.sql
server/memos_server/: api_models.py  app.py  condensation.py  db.py  demo_seed.py  embedding.py  env.py  extractor.py  l1_redis.py  procedural.py  queue.py  settings.py
server/memos_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/tests/: test_condensation_card.py  test_health.py  test_integration_api.py  test_rerank_scoring.py
utils/: api.ts  mockData.ts
(+2 files in other folders)
