[project]
name = "memos-server"
version = "0.1.0"
description = "MemOS Memory Controller API (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "redis>=5.0.4",
  "rq>=1.16.2",
  "pgvector>=0.3.6",
  "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["memos_server"]

[tool.uvicorn]
factory = true
